# icytower-ng

./: .gitignore  Dockerfile.win32  README.md  io.github.royeldar.icytower.yml
assets/: .gitignore  extract.sh
scripts/: build.sh  install.sh  run.sh  uninstall.sh
scripts/debug/: build.sh  install.sh  run.sh  uninstall.sh
scripts/win32/: build.sh  setup.sh
src/: background.c  background.h  character.c  character.h  config.h  controls.c  controls.h  credits.c  credits.h  events.h  exit.c  exit.h  eye_candy.c  eye_candy.h  flatpak.h  floor.c  floor.h  fonts.c  fonts.h  fullscreen.c  fullscreen.h  game.c  game.h  gameover.c  gameover.h  gameplay.c  gameplay.h  gfx.c  gfx.h  hashmap.h  instructions.c  instructions.h  keyboard.c  keyboard.h  keymap.c  keymap.h  level.c  level.h  main.c  menu.c  (+30 more)
src/misc/: icytower.desktop
